k8s/webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
  labels:
    app: webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui
  template:
    metadata:
      labels:
        app: webui
    spec:
      containers:
        - name: webui
          image: ghcr.io/open-webui/open-webui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
