k8s/webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
  labels:
    app: webui
spec:
  type: NodePort
  selector:
    app: webui
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
